--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta name="robots" content="none">
 <link rel="stylesheet" href="https://jaajko.eu/styles.css">
-<title>random cat videos!</title>
+<title>random memes!</title>
 <meta name="viewport" content="width=device-width, initial-scale=0.80, user-scalable=no">
 <link rel="icon" type="image/x-icon" href="https://assets.jaajko.eu/favicon.ico">
 <style>
@@ -27,14 +27,14 @@ text-align: center;
 <video id="cat" width="480" height="360" autoplay playsinline style="background:black" controls>
 </center>
 <center>
-<p>This website plays a randomly selected cat video everytime you refresh!</p>
+<p>This website plays a randomly selected meme everytime you refresh!</p>
 </center>
 <script>
 var vidElement = document.getElementById('cat');
 var vidSources = [
-  "https://assets.jaajko.eu/cats/1.mp4", 
-  "https://assets.jaajko.eu/cats/2.mp4",
-  "https://assets.jaajko.eu/cats/3.mp4"
+  "https://assets.jaajko.eu/memes/1.mp4", 
+  "https://assets.jaajko.eu/memes/2.mp4",
+  "https://assets.jaajko.eu/memes/3.mp4"
   ];
 var activeVideo = Math.floor((Math.random() * vidSources.length));
 vidElement.src = vidSources[activeVideo];
