--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="robots" content="noindex">
-<meta http-equiv = "refresh" content = "0; url = https://cats.jaajko.eu"/>
+<meta name="robots" content="none">
+<meta http-equiv = "refresh" content = "0; url = https://memes.jaajko.eu"/>
 </head>
 </html>
