--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@ text-align: center;
 </head>
 <body>
 <center>
-<h2 style="color:rgb(255, 0, 0);">random cat videos!</h2>
-<video id="cat" width="480" height="360" autoplay playsinline style="background:black" controls>
+<h2 style="color:rgb(255, 0, 0);">random memes</h2>
+<video id="meme" width="480" height="360" autoplay playsinline style="background:black" controls>
 </center>
 <center>
-<p>This website plays a randomly selected meme everytime you refresh!</p>
+<p>This website plays a randomly selected meme everytime you refresh</p>
 </center>
 <script>
-var vidElement = document.getElementById('cat');
+var vidElement = document.getElementById('meme');
 var vidSources = [
   "https://assets.jaajko.eu/memes/1.mp4", 
   "https://assets.jaajko.eu/memes/2.mp4",
