--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ text-align: center;
 </center>
 <center>
 <p>This website plays a randomly selected meme everytime you refresh</p>
+<p>memes probably from discord</p>
 </center>
 <script>
 var vidElement = document.getElementById('meme');
