--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@ text-align: center;
 </center>
 <center>
 <p>This website plays a randomly selected meme everytime you refresh</p>
-<p>memes probably from discord</p>
+<p>memes probably from discord<br>
+memes: 21</p>
 </center>
 <script>
 var vidElement = document.getElementById('meme');
