--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@ text-align: center;
 <video id="meme" width="480" height="360" autoplay playsinline style="background:black" controls>
 </center>
 <center>
-<p>This website plays a randomly selected meme everytime you refresh</p>
-<p>memes probably from discord<br>
+<p>This website plays a randomly selected meme everytime you refresh<br>
 memes: 21</p>
+<p>memes probably from discord</p>
 </center>
 <script>
 var vidElement = document.getElementById('meme');
