--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ vidElement.addEventListener('ended', function(e) {
 </script>
 
 <div class="footer">
-<p>Made with <3 by <a href="https://jaajko.eu">jaajko</a>. This page is <a href=https://github.com/jaajko/website>open source</a><br>
+<p>Made with <3 by <a href="https://jaajko.eu">jaajko</a>. This page is <a href=https://github.com/jaajko/memes>open source</a><br>
 <a href="https://jaajko.eu/privacy-policy">Privacy Policy</a></p>
 </div>
 </body>
