--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
 <meta charset="UTF-8">
 <meta name="robots" content="none">
 <link rel="stylesheet" href="https://jaajko.eu/styles.css">
-<title>jaajko │ random memes</title>
+<title>jaajko | random memes</title>
 <meta name="viewport" content="width=device-width, initial-scale=0.80, user-scalable=no">
 <link rel="icon" type="image/x-icon" href="https://assets.jaajko.eu/favicon.ico">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@jaajko_">
+<meta name="twitter:creator" content="@jaajko_">
+<meta name="twitter:title" content="jaajko | random memes">
+<meta property="og:url" content="https://memes.jaajko.eu"/>
+<meta property="og:type" content="website"/>
+<meta property="og:title" content="jaajko | random memes"/>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto:wght@100&display=swap');
 </style>
