--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <html lang="en">
 <meta charset="UTF-8">
 <meta name="robots" content="none">
+<meta name="copyright" content="jaajko">
 <link rel="stylesheet" href="https://jaajko.eu/styles.css">
 <title>jaajko | random memes</title>
 <meta name="viewport" content="width=device-width, initial-scale=0.80, user-scalable=no">
