--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta name="robots" content="none">
 <meta name="copyright" content="jaajko">
-<link rel="stylesheet" href="https://jaajko.eu/styles.css">
+<link rel="stylesheet" href="https://jaajko.eu/main.css">
 <title>jaajko | random memes</title>
 <meta name="viewport" content="width=device-width, initial-scale=0.80, user-scalable=no">
 <link rel="icon" type="image/x-icon" href="https://assets.jaajko.eu/favicon.ico">
@@ -110,8 +110,7 @@ vidElement.addEventListener('ended', function(e) {
 </script>
 
 <div class="footer">
-<p>Made with <3 by <a href="https://jaajko.eu" target="_blank" rel="noopener">jaajko</a>. This page is <a href="https://github.com/jaajko/memes" target="_blank" rel="noopener">open source</a><br>
-<a href="https://jaajko.eu/privacy-policy" target="_blank" rel="noopener">Privacy Policy</a></p>
+<p>This page is <a href="https://github.com/jaajko/memes" target="_blank" rel="noopener">open source</a><br></p>
 </div>
 </body>
 </html>
