--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ text-align: center;
 </style>
 </head>
 <body>
+<header id="header">
 <center>
 <h2 style="color:rgb(255, 0, 0);">random memes</h2>
 <video id="meme" width="480" height="360" autoplay playsinline style="background:black" controls>
@@ -39,6 +40,7 @@ text-align: center;
 memes: 52</p>
 <p>memes probably from discord</p>
 </center>
+</header>
 <script>
 var vidElement = document.getElementById('meme');
 var vidSources = [
