--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta name="robots" content="none">
 <meta name="copyright" content="jaajko">
-<link rel="stylesheet" href="https://jaajko.eu/main.css">
+<link rel="stylesheet" href="https://jaajko.eu/styles.css">
 <title>jaajko | random memes</title>
 <meta name="viewport" content="width=device-width, initial-scale=0.80, user-scalable=no">
 <link rel="icon" type="image/x-icon" href="https://assets.jaajko.eu/favicon.ico">
@@ -30,7 +30,6 @@ text-align: center;
 </style>
 </head>
 <body>
-<header id="header">
 <center>
 <h2 style="color:rgb(255, 0, 0);">random memes</h2>
 <video id="meme" width="480" height="360" autoplay playsinline style="background:black" controls>
@@ -40,7 +39,6 @@ text-align: center;
 memes: 52</p>
 <p>memes probably from discord</p>
 </center>
-</header>
 <script>
 var vidElement = document.getElementById('meme');
 var vidSources = [
