--- a/404.html
+++ b/404.html
@@ -2,6 +2,6 @@
 <html>
 <head>
 <meta name="robots" content="none">
-<meta http-equiv = "refresh" content = "0; url = https://memes.jaajko.eu"/>
+<meta http-equiv = "refresh" content = "0; url = https://memes.jaajko.fi"/>
 </head>
 </html>
