--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 <meta charset="UTF-8">
 <meta name="robots" content="none">
 <meta name="copyright" content="jaajko">
-<link rel="stylesheet" href="https://jaajko.eu/main.css">
+<link rel="stylesheet" href="https://jaajko.fi/main.css">
 <title>jaajko | random memes</title>
 <meta name="viewport" content="width=device-width, initial-scale=0.80, user-scalable=no">
-<link rel="icon" type="image/x-icon" href="https://assets.jaajko.eu/favicon.ico">
+<link rel="icon" type="image/x-icon" href="https://assets.jaajko.fi/favicon.ico">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jaajko_">
 <meta name="twitter:creator" content="@jaajko_">
 <meta name="twitter:title" content="jaajko | random memes">
-<meta property="og:url" content="https://memes.jaajko.eu"/>
+<meta property="og:url" content="https://memes.jaajko.fi"/>
 <meta property="og:type" content="website"/>
 <meta property="og:title" content="jaajko | random memes"/>
 <style>
@@ -49,58 +49,58 @@ text-align: center;
 <script>
 var vidElement = document.getElementById('meme');
 var vidSources = [
-  "https://assets.jaajko.eu/memes/1.mp4", 
-  "https://assets.jaajko.eu/memes/2.mp4",
-  "https://assets.jaajko.eu/memes/3.mp4",
-  "https://assets.jaajko.eu/memes/4.mp4",
-  "https://assets.jaajko.eu/memes/5.mp4",
-  "https://assets.jaajko.eu/memes/6.mp4",
-  "https://assets.jaajko.eu/memes/7.mp4",
-  "https://assets.jaajko.eu/memes/8.mp4",
-  "https://assets.jaajko.eu/memes/9.mp4",
-  "https://assets.jaajko.eu/memes/10.mp4",
-  "https://assets.jaajko.eu/memes/11.mp4",
-  "https://assets.jaajko.eu/memes/12.mp4",
-  "https://assets.jaajko.eu/memes/13.mp4",
-  "https://assets.jaajko.eu/memes/14.mov",
-  "https://assets.jaajko.eu/memes/15.mp4",
-  "https://assets.jaajko.eu/memes/16.mp4",
-  "https://assets.jaajko.eu/memes/17.mov",
-  "https://assets.jaajko.eu/memes/18.mp4",
-  "https://assets.jaajko.eu/memes/19.mp4",
-  "https://assets.jaajko.eu/memes/20.mp4",
-  "https://assets.jaajko.eu/memes/21.mp4",
-  "https://assets.jaajko.eu/memes/22.mp4",
-  "https://assets.jaajko.eu/memes/23.mp4",
-  "https://assets.jaajko.eu/memes/24.mp4",
-  "https://assets.jaajko.eu/memes/25.mp4",
-  "https://assets.jaajko.eu/memes/26.mov",
-  "https://assets.jaajko.eu/memes/27.mp4",
-  "https://assets.jaajko.eu/memes/28.webm",
-  "https://assets.jaajko.eu/memes/29.mp4",
-  "https://assets.jaajko.eu/memes/30.mp4",
-  "https://assets.jaajko.eu/memes/31.mp4",
-  "https://assets.jaajko.eu/memes/32.mp4",
-  "https://assets.jaajko.eu/memes/33.mov",
-  "https://assets.jaajko.eu/memes/34.mp4",
-  "https://assets.jaajko.eu/memes/35.mp4",
-  "https://assets.jaajko.eu/memes/36.mp4",
-  "https://assets.jaajko.eu/memes/37.mp4",
-  "https://assets.jaajko.eu/memes/38.mp4",
-  "https://assets.jaajko.eu/memes/39.mp4",
-  "https://assets.jaajko.eu/memes/40.mp4",
-  "https://assets.jaajko.eu/memes/41.mp4",
-  "https://assets.jaajko.eu/memes/42.mp4",
-  "https://assets.jaajko.eu/memes/43.mov",
-  "https://assets.jaajko.eu/memes/44.mp4",
-  "https://assets.jaajko.eu/memes/45.mp4",
-  "https://assets.jaajko.eu/memes/46.mp4",
-  "https://assets.jaajko.eu/memes/47.mp4",
-  "https://assets.jaajko.eu/memes/48.mp4",
-  "https://assets.jaajko.eu/memes/49.mp4",
-  "https://assets.jaajko.eu/memes/50.mp4",
-  "https://assets.jaajko.eu/memes/51.mp4",
-  "https://assets.jaajko.eu/memes/52.mp4",
+  "https://assets.jaajko.fi/memes/1.mp4", 
+  "https://assets.jaajko.fi/memes/2.mp4",
+  "https://assets.jaajko.fi/memes/3.mp4",
+  "https://assets.jaajko.fi/memes/4.mp4",
+  "https://assets.jaajko.fi/memes/5.mp4",
+  "https://assets.jaajko.fi/memes/6.mp4",
+  "https://assets.jaajko.fi/memes/7.mp4",
+  "https://assets.jaajko.fi/memes/8.mp4",
+  "https://assets.jaajko.fi/memes/9.mp4",
+  "https://assets.jaajko.fi/memes/10.mp4",
+  "https://assets.jaajko.fi/memes/11.mp4",
+  "https://assets.jaajko.fi/memes/12.mp4",
+  "https://assets.jaajko.fi/memes/13.mp4",
+  "https://assets.jaajko.fi/memes/14.mov",
+  "https://assets.jaajko.fi/memes/15.mp4",
+  "https://assets.jaajko.fi/memes/16.mp4",
+  "https://assets.jaajko.fi/memes/17.mov",
+  "https://assets.jaajko.fi/memes/18.mp4",
+  "https://assets.jaajko.fi/memes/19.mp4",
+  "https://assets.jaajko.fi/memes/20.mp4",
+  "https://assets.jaajko.fi/memes/21.mp4",
+  "https://assets.jaajko.fi/memes/22.mp4",
+  "https://assets.jaajko.fi/memes/23.mp4",
+  "https://assets.jaajko.fi/memes/24.mp4",
+  "https://assets.jaajko.fi/memes/25.mp4",
+  "https://assets.jaajko.fi/memes/26.mov",
+  "https://assets.jaajko.fi/memes/27.mp4",
+  "https://assets.jaajko.fi/memes/28.webm",
+  "https://assets.jaajko.fi/memes/29.mp4",
+  "https://assets.jaajko.fi/memes/30.mp4",
+  "https://assets.jaajko.fi/memes/31.mp4",
+  "https://assets.jaajko.fi/memes/32.mp4",
+  "https://assets.jaajko.fi/memes/33.mov",
+  "https://assets.jaajko.fi/memes/34.mp4",
+  "https://assets.jaajko.fi/memes/35.mp4",
+  "https://assets.jaajko.fi/memes/36.mp4",
+  "https://assets.jaajko.fi/memes/37.mp4",
+  "https://assets.jaajko.fi/memes/38.mp4",
+  "https://assets.jaajko.fi/memes/39.mp4",
+  "https://assets.jaajko.fi/memes/40.mp4",
+  "https://assets.jaajko.fi/memes/41.mp4",
+  "https://assets.jaajko.fi/memes/42.mp4",
+  "https://assets.jaajko.fi/memes/43.mov",
+  "https://assets.jaajko.fi/memes/44.mp4",
+  "https://assets.jaajko.fi/memes/45.mp4",
+  "https://assets.jaajko.fi/memes/46.mp4",
+  "https://assets.jaajko.fi/memes/47.mp4",
+  "https://assets.jaajko.fi/memes/48.mp4",
+  "https://assets.jaajko.fi/memes/49.mp4",
+  "https://assets.jaajko.fi/memes/50.mp4",
+  "https://assets.jaajko.fi/memes/51.mp4",
+  "https://assets.jaajko.fi/memes/52.mp4",
   ];
 var activeVideo = Math.floor((Math.random() * vidSources.length));
 vidElement.src = vidSources[activeVideo];
